--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "typescript": "^2.2.1",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
+    "vue-ts": "^1.0.11",
+    "vue-ts-loader": "0.0.3",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
